--- a/package.json
+++ b/package.json
@@ -4,16 +4,14 @@
   "description": "a todo list",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+
   },
   "keywords": [
     "js",
     "templates",
-    "styling"
+    "no jquery",
+    "localstorage"
   ],
   "author": "Elena",
-  "license": "ISC",
-  "dependencies": {
-    "handlebars": "^4.0.10"
-  }
+  "license": "ISC"
 }
