--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "todo-list",
+  "name": "simple-list",
   "version": "1.0.0",
-  "description": "a todo list",
+  "description": "a simple list app",
   "main": "index.js",
   "scripts": {
 
